<resources>
    <string name="app_name">WMAD2</string>
    <string name="txtsignin"> Sign In </string>
    <string name="txtregister"> Register Here: </string>

    <string name="splash">Welcome to STYLE OMEGA </string>


    <string name="password">Enter Password </string>
    <string name="name">Enter name </string>
    <string name="email">Enter E-mail address </string>
    <string name="confirmPassword">Confirm Password </string>
    <string name="contactno">Enter contact Number </string>


    <string name="txtusername">User Name</string>
    <string name="txtname"> Name </string>
    <string name="txtemail">Email-address</string>
    <string name="txtpassword">Password </string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="txtContactNumber">Contact Number</string>
    <string name="txtgrid">Style Omega </string>
    <string name="men">Gents </string>
    <string name="women">Ladies </string>
    <string name="kids">Kids </string>
    <string name="accessories">Accessories </string>


    <string name="login_button"> Login </string>
    <string name="register_button"> New to StyleOmega? </string>
    <string name="join_button">Join STYLEOMEGA </string>
    <string name="title_activity_navigation">Style Omega</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="contactname">Name</string>
    <string name="logout">Logout</string>
    <string name="contactemail">Email</string>
    <string name="contactphone">Contact Number</string>
    <string name="message">Message </string>
    <string name="search">Search </string>
    <string name="cart">Cart </string>
    <string name="editprofile">Edit Profile </string>
    <string name="fav">Favourite</string>
    <string name="aboutus">About Us </string>
    <string name="contactus">Contact Us </string>
    <string name="shop">Shop</string>

    <string name="home">Home</string>
    <string name="cancelcart">Cancel History</string>
    <string name="category">Category</string>
    <string name="purchasehistory">Purchase History </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="namenav">Moksha Ratnayake</string>
    <string name="emailnav"> moksha.nish@gmail.com</string>

    <string name="size">Size</string>
    <string name="quantity">Quantity</string>

    <string name="buy_button"> Buy Now </string>
    <string name="addtocart_button">Add to cart </string>
    <string name="share_button">Share </string>


    <string name="profileinfo">Change Profile Information </string>
    <string name="upname">Name</string>
    <string name="upphone">Phone </string>
    <string name="passwordchange">Change Password </string>
    <string name="currentpassword">Current Password </string>
    <string name="newpassword">New Password </string>
    <string name="verifypassword">New Password,again </string>
    <string name="update_button">Update </string>
    <string name="emailupdate">Email </string>

    <string name="para"> STYLE OMEGA is a global online fashion destination for men, women and kids.  </string>


</resources>
