<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.wmad2.fragment.EditProfileFragment">

    <TextView
        android:id="@+id/textViewcpi"
        android:layout_width="346dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profileinfo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewun"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewup"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="124dp"
        android:text="Phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextun"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/upname"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewun"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextup"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/upphone"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewup"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonUpdate1"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:text="@string/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="356dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="284dp"
        android:text="@string/passwordchange"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewucp"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="344dp"
        android:text="Current"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewunp"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:text="New"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewuvnp"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="464dp"
        android:text="Verify"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextucp"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/currentpassword"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewucp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextunp"
        android:layout_width="229dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/newpassword"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewunp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextuvnp"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/verifypassword"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewuvnp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonUpdate2"
        android:layout_width="209dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="500dp"
        android:text="@string/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewue"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTexteu"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/emailupdate"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewue"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
